# windows-test-named-pipe

./: Cargo.toml
src/: main.rs
