[package]
name = "test-named-pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.8.0"
color-eyre = "0.6.2"
eyre = "0.6.9"
tokio = { version = "1.34.0", features = ["full"] }
windows = { version = "0.52.0", features = ["Win32_Foundation"] }
